security-context/kuard-pod-runtimeclass.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "kuard"
  namespace: default
  labels:
    app: "kuard"
spec:
  # container runtime class
  runtimeClassName: firecracker
  containers:
  - name: kuard
    image: "debian-slim:latest"
    resources:
      limits:
        cpu: 200m
        memory: 500Mi
      requests:
        cpu: 100m
        memory: 200Mi    
    ports:
    - containerPort:  8080
      name:  http
      protocol: TCP
  restartPolicy: Always
