security-context/network-policy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kuard-networkpolicy
  labels:
    app: kuard
  
---
apiVersion: v1
kind: Pod
metadata:
  name: kuard
  namespace: kuard-networkpolicy
  labels:
    app: kuard
spec:
  containers:
  - image: gcr.io/kuar-demo/kuard-amd64:blue
    name: kuard
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
    resources:
      limits:
        cpu: 200m
        memory: 500Mi
      requests:
        cpu: 100m
        memory: 200Mi    
  restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: kuard
  namespace: kuard-networkpolicy
spec:
  selector:
    app: kuard
  type: ClusterIP
  ports:
  - name: kuard
    protocol: TCP
    port: 80 # service port
    targetPort: 8080 # container port
