security-context/network-policy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress

# kubectl apply -f networkpolicy-default-deny.yaml --namespace kuard-networkpolicy
